# dllite_micro

./: .gitignore  README.md  README_zh.md
interfaces/kits/: README.md  README_zh.md
interfaces/kits/interpreter/: feature_interpreter.h  model_config.h  model_interpreter.h  type_define.h
samples/: BUILD.gn
samples/app/mnist/: BUILD.gn
samples/app/mnist/src/: main.cpp
samples/model/mnist/: BUILD.gn
samples/model/mnist/include/: mindspore_adapter.h
samples/model/mnist/src/: mindspore_adapter.cpp
services/: BUILD.gn
services/inferframework/: BUILD.gn
services/inferframework/include/common/: infer_framework.h  infer_wrapper_factory.h  utils.h
services/inferframework/include/mindspore/: mindspore_config.h  mindspore_wrapper.h  mindspore_wrapper_creater.h
services/inferframework/src/common/: infer_wrapper_factory.cpp  utils.cpp
services/inferframework/src/mindspore/: mindspore_config.cpp  mindspore_wrapper.cpp  mindspore_wrapper_creater.cpp
services/interpreter/: BUILD.gn
services/interpreter/src/: feature_interpreter.cpp  model_config.cpp  model_interpreter.cpp
test/: BUILD.gn
test/unittest/common/: BUILD.gn  feature_interpreter_test.cpp  model_interpreter_test.cpp
