# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#  http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/ndk/ndk.gni")

executable("dllite_micro_mnist_sample") {
    sources = [
        "src/main.cpp",
    ]

    include_dirs = [
        "//foundation/ai/dllite_micro/interfaces/kits/interpreter",
        "//third_party/bounds_checking_function/include",
        "//utils/native/lite/include",
    ]
    
    deps = [
        "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
        "//foundation/ai/dllite_micro/services/interpreter:dlliteclient",
        "//foundation/ai/dllite_micro/services/inferframework:dlliteclient_mslite_for_iot",
    ]

    public_deps = [ "//third_party/bounds_checking_function:libsec_shared" ]

    defines = ["NOT_USE_STL"]
    defines += ["ENABLE_NEON"]
    defines += ["ENABLE_ARM"]
    defines += ["ENABLE_ARM32"]

    cflags = [
        "-fPIC"
    ]
    cflags_cc = cflags
    ldflags = [
        "-ldlliteclient",
        "-lstdc++",
        "-fno-strict-aliasing",
        "-Wall",
        "-pedantic",
    ]
}