# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#  http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/ndk/ndk.gni")

shared_library("libmnist") {
    sources = [
        "src/micro/net.c",
        "src/micro/session.cc",
        "src/micro/tensor.cc",
        "src/micro/weight.c",
        "src/mindspore_adapter.cpp",
    ]

    include_dirs = [
        "include",
        "src/micro",
        "//foundation/ai/dllite_micro/services/third_party/mindspore_lite",
        "//foundation/ai/dllite_micro/services/third_party/mindspore_lite/include",
    ]

    defines = [ "NOT_USE_STL" ]
    defines += [ "ENABLE_NEON" ]
    defines += [ "ENABLE_ARM" ]
    defines += [ "ENABLE_ARM32" ]
    cflags = ["-fPIC"]
    cflags_cc = cflags
    libs = [
        "lib/libwrapper.a",
        "lib/libmindspore-lite.a",
    ]
}
